修改登录配置